# miden-source-code-verification

./: .dockerignore  MIGRATION.md  README.md  biome.json  docker-compose.yml  miden-contract-verification-api-legacy.md  miden-source-code-verification-prd.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: deploy-api-compile-cloudflare.yml  deploy-api-docs.yml  deploy-cloudflare.yml  deploy-web-verifier-cloudflare.yml
apps/api-compile/: .dockerignore  .env.example  Dockerfile  package-lock.json  package.json
apps/api-compile-cloudflare/: package.json  worker-configuration.d.ts  wrangler.jsonc
apps/api-compile-cloudflare/src/: server.ts
apps/api-compile/__tests__/: compile.test.ts  data.ts  import.test.ts  utils.ts  verify.test.ts
apps/api-compile/crates/miden-import/: Cargo.toml  rust-toolchain.toml
apps/api-compile/crates/miden-import/src/: main.rs
apps/api-compile/crates/miden-verifier/: Cargo.toml
apps/api-compile/crates/miden-verifier/src/: main.rs
apps/api-compile/src/: server.ts
apps/api-docs/: .env.example  README.md  package.json  tsconfig.json
apps/api-docs/src/: build.ts
apps/api-registry/: .env.example  Dockerfile  drizzle.config.ts  package.json  tsconfig.json  vitest.config.ts  worker-configuration.d.ts  wrangler.jsonc
apps/api-registry-cloudflare/: package.json  worker-configuration.d.ts  wrangler.jsonc
apps/web-verifier/: Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
apps/web-verifier-cloudflare/: package.json  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc
(+76 files in other folders)
