[package]
name = "miden-import"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
miden-client = { version = "0.15", features = ["tonic", "testing"] }
miden-client-sqlite-store = { version = "0.15", package = "miden-client-sqlite-store" }
serde_json = { version = "1.0", features = ["preserve_order"] }
tokio = { version = "1.52", features = ["rt-multi-thread", "net", "macros", "fs"] }
